--- a/infoVoli.html
+++ b/infoVoli.html
@@ -25,32 +25,32 @@
         </header>
 
         <section>
-            <p> Resta aggiornato sui voli di tuo interesse: basta selezionare gli aeroporti di Partenza e di Arrivo e la data di tua interesse. </p>
+            <p> Resta aggiornato sui voli di tuo interesse: seleziona aeroporto di Partenza, aeroporto di Arrivo e una data. </p>
             <form name="searchFlight" id='form'>
                 <!-- Scelta Aeroporto di Partenza -->
                 <label> Aeroporto di Partenza
                     <select name = 'departureAirport'> 
-                        <option value = 'Barajas'> Madrid (Spagna) Barajas MAD </option>
-                        <option value = 'Milano Malpensa'> Milano (Italia) Malpensa MXP </option>
-                        <option value = 'Heathrow'> Londra (UK) Heathrow LHR </option>
-                        <option value = 'Kastrup'> Copenaghen (Danimarca) Kastrup CPH </option>
-                        <option value = 'Dublin International'> Dublino (Irlanda) Aeroporto Civile DUB </option> 
-                        <option value = 'Peretola'> Firenze (Italia) Amerigo Vespucci FLR </option>
-                        <option value = 'Berlin-Schoenefeld'> Berlino (Germania) Int. Airport BER </option>
-                        <option value = 'Berlin-Schoenefeld'> Parigi (Francia) Charles de Gaulle CDG </option>
+                        <option value = 'MAD'> Madrid (Spagna) Barajas MAD </option>
+                        <option value = 'MXP'> Milano (Italia) Malpensa MXP </option>
+                        <option value = 'LHR'> Londra (UK) Heathrow LHR </option>
+                        <option value = 'CPH'> Copenaghen (Danimarca) Kastrup CPH </option>
+                        <option value = 'DUB'> Dublino (Irlanda) Aeroporto Civile DUB </option> 
+                        <option value = 'FLR'> Firenze (Italia) Amerigo Vespucci FLR </option>
+                        <option value = 'BER'> Berlino (Germania) Int. Airport BER </option>
+                        <option value = 'CDG'> Parigi (Francia) Charles de Gaulle CDG </option>
                     </select>
                 </label>
                 <!-- Scelta Aeroporto di Arrivo -->
                 <label> Aeroporto di Arrivo
                     <select name = 'arrivalAirport'> 
-                        <option value = 'Barajas'> Madrid (Spagna) Barajas MAD </option>
-                        <option value = 'Milano Malpensa'> Milano (Italia) Malpensa MXP </option>
-                        <option value = 'Heathrow'> Londra (UK) Heathrow LHR </option>
-                        <option value = 'Kastrup'> Copenaghen (Danimarca) Kastrup CPH </option>
-                        <option value = 'Dublin International'> Dublino (Irlanda) Aeroporto Civile DUB </option> 
-                        <option value = 'Peretola'> Firenze (Italia) Amerigo Vespucci FLR </option>
-                        <option value = 'Berlin-Schoenefeld'> Berlino (Germania) Int. Airport BER </option>
-                        <option value = 'Berlin-Schoenefeld'> Parigi (Francia) Charles de Gaulle CDG </option>
+                        <option value = 'MAD'> Madrid (Spagna) Barajas MAD </option>
+                        <option value = 'MXP'> Milano (Italia) Malpensa MXP </option>
+                        <option value = 'LHR'> Londra (UK) Heathrow LHR </option>
+                        <option value = 'CPH'> Copenaghen (Danimarca) Kastrup CPH </option>
+                        <option value = 'DUB'> Dublino (Irlanda) Aeroporto Civile DUB </option> 
+                        <option value = 'FLR'> Firenze (Italia) Amerigo Vespucci FLR </option>
+                        <option value = 'BER'> Berlino (Germania) Int. Airport BER </option>
+                        <option value = 'CDG'> Parigi (Francia) Charles de Gaulle CDG </option>
                     </select>
                 </label>
                 <!-- Selezione Data -->
