--- a/infoVoli.html
+++ b/infoVoli.html
@@ -60,18 +60,18 @@
             </form>
             
             <section class='flightGridHeading'> 
-                <p> N. Volo </p>
+                <p class="paragraph"> N. Volo </p>
                 <div id="from">
-                    <p> Da </p>
+                    <p class="paragraph"> Da </p>
                     <img src="https://icons-for-free.com/iconfiles/png/512/flight+flights+plane+icon-1320085756199930884.png">
                 </div>
                 <div id="to">
-                    <p> A </p>
+                    <p class="paragraph"> A </p>
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR58IK00dIQzPBaBGr7AZAAqVQDszwg7Qo9qdNaccoMzBqu0J32lvheiF63IVLrb9WCQ2E&usqp=CAU">
                 </div>
-                <p> Partenza </p> 
-                <p> Arrivo </p> 
-                <p> Stato </p>
+                <p class="paragraph"> Partenza </p> 
+                <p class="paragraph"> Arrivo </p> 
+                <p class="paragraph"> Stato </p>
             </section>
             
             <section id="flightGrid">
