--- a/infoVoli.html
+++ b/infoVoli.html
@@ -59,25 +59,24 @@
                 <input type="submit" name="search" value="Cerca Volo">
             </form>
             
-            <section class='flightGridHeading'> 
-                <p class="paragraph"> N. Volo </p>
-                <div id="from">
-                    <p class="paragraph"> Da </p>
-                    <img src="https://icons-for-free.com/iconfiles/png/512/flight+flights+plane+icon-1320085756199930884.png">
-                </div>
-                <div id="to">
-                    <p class="paragraph"> A </p>
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR58IK00dIQzPBaBGr7AZAAqVQDszwg7Qo9qdNaccoMzBqu0J32lvheiF63IVLrb9WCQ2E&usqp=CAU">
-                </div>
-                <p class="paragraph"> Partenza </p> 
-                <p class="paragraph"> Arrivo </p> 
-                <p class="paragraph"> Stato </p>
-            </section>
-            
-            <section id="flightGrid">
-                <!-- inizialmente vuota, viene riempita dinamicamente in seguito a richiesta a endpoint di AviationStack-->
-            </section>
-
+            <!-- Tabella inizialmente non visibile e contenente solo l'intestazione;
+                 viene riempita dinamicamente in seguito a richiesta a endpoint di AviationStack-->
+            <table id = 'flightTable'>
+                <tr data-type ="heading" id = heading> <!-- Apertura Intestazione -->
+                    <th> N. Volo </th>
+                    <th id = 'from'> 
+                      Da
+                      <img src="https://image.flaticon.com/icons/png/512/68/68380.png">
+                    </th> 
+                    <th id = 'to'> 
+                      A
+                      <img src="https://image.flaticon.com/icons/png/512/68/68542.png">
+                    </th> 
+                    <th> Partenza </th> 
+                    <th> Arrivo </th>
+                    <th> Stato </th>
+                </tr> <!-- Chiusura Intestazione -->
+            </table>
         </section>
 
         <!-- Apertura footer -->
